All the different div have been added now all division are set correctly and visible after scrole down

--- a/app/frontend/react-docker/src/App.css
+++ b/app/frontend/react-docker/src/App.css
@@ -1,9 +1,8 @@
 html{
- background-color: #282c34;
+ background-color: #000000;
 }
 
  body {
-  background-image: url("https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fi.redd.it%2F3e2afpjsi4f61.png&f=1&nofb=1&ipt=70e4c175e9a633f24e120835a618979459eb7c4b721affa2ed497e321e9568d8&ipo=images");
   background-repeat: no-repeat;
   background-position: center;
   background-size: auto 100%;
